better fix for header alignment

--- a/css/painting.css
+++ b/css/painting.css
@@ -24,7 +24,7 @@ html, body {
 
 .top-left-nav {
   float: right;
-  font-family: 'Open Sans', sans-serif;
+  font-family: sans-serif;
   font-weight: lighter;
   font-size: small;
   color: #666;
